static/style.css
html {
    height: 100%;
}

body {
    display: flex;
    flex-direction: column;
    height: 100%;
}

.uk-offcanvas-content {
    flex: 1 0 auto;
}

.uk-background-secondary .uk-navbar-dropdown-nav .uk-active a {
    color: white !important;
}

.uk-background-secondary .uk-navbar-dropdown-nav .uk-nav-header {
    color: #666 !important;
    text-transform: none !important;
    font-weight: bold !important;
    font-size: 120% !important;
    padding: 0 !important;
}
.uk-background-secondary .uk-navbar-dropdown-nav .uk-nav-header.uk-active {
    color: white !important;
}

.uk-background-secondary .uk-navbar-dropbar {
    background: #222222 !important;
}

.uk-navbar-container,
.uk-sticky-placeholder,
.uk-navbar-nav > li > a,
.uk-navbar-left > a{
    height: 70px;
}

.navbar-logo{
    margin-left: -10px;
    padding-left: 3px;
    margin-top: 2px;
    height: 60%
}

.uk-navbar-dropdown {
    top: 45px !important;
}

.hover-title a {
    visibility: hidden;
    opacity: 0;

    transition: opacity 200ms ease-in-out;
    -moz-transition: opacity 200ms ease-in-out;
    -webkit-transition: opacity 200ms ease-in-out;
}

.hover-title:hover a {
    visibility: visible;
    opacity: 1;

    transition: opacity 200ms ease-in-out;
    -moz-transition: opacity 200ms ease-in-out;
    -webkit-transition: opacity 200ms ease-in-out;
}

.uk-article-title {
    margin-bottom: 0 !important;
}

.uk-article-meta {
    margin-top: 0 !important;
}

.uk-section {
    padding-top: 20px;
    padding-bottom: 30px;
}

.uk-heading-divider .uk-article-meta {
    margin-bottom: 0;
}

img.uk-border-rounded {
    border: 1px #25292f solid;
}

footer {
    flex-shrink: 0;
}

footer div.uk-section {
    padding: 0 0 0 0;
}

footer div.uk-section div.uk-text-center {
    margin-top: 20px;
}

.uk-button-darkish {
    background: rgba(0, 0, 0, 0.11);
    border: 1px solid rgba(34, 34, 34, 0.09);
}

.uk-button-darkish:hover {
    background: rgba(0, 0, 0, 0.22);
}

.uk-button-dark {
    background: rgba(0, 0, 0, 0.95);
    border: 1px solid rgba(34, 34, 34, 0.93);
    color: white;
}

.uk-button-dark:hover {
    background: rgba(0, 0, 0, 0.70);
}

/* Flash of Unstyled Content fixes */
.prevent_fouc {
    display: none;
}

.uk-navbar-container {
    padding-left: 40px;
    padding-right: 40px;
}

/* Rendered document fixes */
.document li p {
    margin-bottom: 0;
}

.document img {
    margin-bottom: 20px;
}

/* Styling for Partners page cards */
div#partner-cards div.uk-card-default {
    margin-top: 2em;
    text-align:center;
}

/* Resize navbar to correct proportions */
img.navbar-logo {
    max-width: 110%;
}

#wiki-nav .uk-nav-divider {
    min-width: 8.0rem;
}

/* Resource page styling */
div.payment-icon img {
    height: 2em;
}

div.payment-icon {
    margin-right: 1em;
}

div.quote {
    border-left: 3px solid #7289DA;
    color: #99AAB5;
    padding-left: 20px;
    margin-bottom: 1rem;
}

.uk-article-meta {
    margin-left: 2px;
}

select {
    position: relative !important;
    top: auto !important;
    left: auto !important;
    -webkit-appearance: unset !important;
    opacity: 1 !important;
}

div.danger-input * {
    /*border-radius: 5px;*/
    /*padding: 0.8rem;*/
    /*min-height: 3.5rem;*/
    color: red;
    border-color: red !important;

    transition: color 0.5s ease,
                border-color 0.5s ease;
}

table.table-bordered {
    border: 1px solid rgb(229, 229, 229) !important;
}

tr.thick-bottom-border {
    border-bottom: 3px solid rgb(229, 229, 229) !important;
}

td.left-border, th.left-border {
    border-left: 1px solid rgb(229, 229, 229) !important;
}

td.right-border, th.right-border {
    border-right: 1px solid rgb(229, 229, 229) !important;
}

/* Fira Code stuff */

@font-face {
  font-family: 'Fira Code';

  src: url('https://unpkg.com/firacode/distr/eot/FiraCode-Regular.eot');
  src: url('https://unpkg.com/firacode/distr/eot/FiraCode-Regular.eot?#iefix') format('embedded-opentype'),
       url('https://unpkg.com/firacode/distr/woff2/FiraCode-Regular.woff2') format('woff2'),
       url('https://unpkg.com/firacode/distr/woff/FiraCode-Regular.woff') format('woff'),
       url('https://unpkg.com/firacode/distr/ttf/FiraCode-Regular.ttf')  format('truetype');
}

.fira-code {
    font-family: 'Fira Code', "monospace", Fallback;
}

textarea.fira-code {
    line-height: 1.3 !important;
}

#wiki-sidebar {
    transition: width ease 1s;
}

#wiki-page {
    overflow-x: hidden;
}

#wiki-sidebar-button {
    color: white;
    height: 3rem;
    width: 3rem;
    min-height: 3rem;
    min-width: 3rem;
    align-items: center;
    justify-content: center;
    /*box-shadow: unset; */
    border: 1px solid rgba(0, 0, 0, 0.11);
}

.code {
    overflow-x: auto;
}

